--- a/src/index.css
+++ b/src/index.css
@@ -439,18 +439,17 @@ footer {
 
         background-color: #ffffff;
 
-        width: 15%;
-        height: 30%;
+        width: 50%;
+        height: 100vh;
 
         position: fixed;
-        overflow-x: hidden;
         top: 55px;
         left: 0px;
 
-        transition: 0.5s;
+        transition: 1s ease-out;
     }
     .no-scroll{
-        overflow: hidden  !important;
+        overflow: hidden;
     }
 
     #respUl {
@@ -498,7 +497,7 @@ footer {
         display: flex;
         flex-direction: column;
         background-color: #e9e9e9;
-        padding: 50px 0px;
+        padding: 50px;
 
     }
 
@@ -509,16 +508,16 @@ footer {
     }
 
     .card-1 {
-        height: 240px;
+        height: 200px;
         width: 200px;
         gap: 12px;
-
+        border-radius: 12px;
     }
 
     .card-1:hover {
         background-color: #a2a2a2;
-        height: 190px;
-        width: 190px;
+        height: 220px;
+        width: 220px;
         transition: ease-out 0.5s;
 
     }
@@ -549,6 +548,7 @@ footer {
     }
     .numbering{
         flex-direction: column;
+        padding: 30px;
     }
 
     footer{
