file path update

--- a/components/contact/contact.htm
+++ b/components/contact/contact.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
-    <link rel="stylesheet" href="/src/components/contact/contact.css">
+    <link rel="stylesheet" href="/components/contact/contact.css">
 </head>
 
 <body>
@@ -16,10 +16,10 @@
 
             </div>
             <ul>
-                <li><a href="/src/index.html">Home</a></li>
-                <li><a href="/src/components/about/aboutus.htm">About</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/components/about/aboutus.htm">About</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="/src/components/contact/contact.htm">Contact</a></li>
+                <li><a href="/components/contact/contact.htm">Contact</a></li>
             </ul>
             <div>
                 <button>
@@ -37,10 +37,10 @@
 
         <div class="sidebar">
             <ul id="respUl">
-                <li><a href="/src/index.html">Home</a></li>
-                <li><a href="/src/components/about/aboutus.htm">About</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/components/about/aboutus.htm">About</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="/src/components/contact/contact.htm">Contact</a></li>
+                <li><a href="/components/contact/contact.htm">Contact</a></li>
             </ul>
         </div>
 
@@ -74,7 +74,7 @@
         </div>
 
     </main>
-    <script src="/src/index.js"></script>
+    <script src="/index.js"></script>
 </body>
 
 </html>
