--- a/components/about/aboutus.htm
+++ b/components/about/aboutus.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
-    <link rel="stylesheet" href="aboutus.css">
+    <link rel="stylesheet" href="/components/about/aboutus.css">
 </head>
 
 <body>
@@ -17,10 +17,10 @@
 
             </div>
             <ul>
-                <li><a href="/src/index.html">Home</a></li>
-                <li><a href="/src/components/about/aboutus.htm">About</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/components/about/aboutus.htm">About</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="/src/components/contact/contact.htm">Contact</a></li>
+                <li><a href="/components/contact/contact.htm">Contact</a></li>
             </ul>
             <div>
                 <button>
@@ -36,10 +36,10 @@
 
         <div class="sidebar">
             <ul id="respUl">
-                <li><a href="/src/index.html">Home</a></li>
-                <li><a href="/src/components/about/aboutus.htm">About</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/components/about/aboutus.htm">About</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="/src/components/contact/contact.htm">Contact</a></li>
+                <li><a href="/components/contact/contact.htm">Contact</a></li>
             </ul>
         </div>
 
@@ -55,7 +55,7 @@
             
 
     </main>
-    <script src="/src/index.js"></script>
+    <script src="/index.js"></script>
 </body>
 
 </html>
