--- a/components/contact/contact.htm
+++ b/components/contact/contact.htm
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/components/about/aboutus.htm">About</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="/components/services/services.htm">Services</a></li>
                 <li><a href="/components/contact/contact.htm">Contact</a></li>
             </ul>
             <div>
@@ -39,7 +39,7 @@
             <ul id="respUl">
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/components/about/aboutus.htm">About</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="/components/services/services.htm">Services</a></li>
                 <li><a href="/components/contact/contact.htm">Contact</a></li>
             </ul>
         </div>
