--- a/index.css
+++ b/index.css
@@ -262,6 +262,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap:50px;
     margin: 100px auto;
     background-color: rgb(225, 225, 225);
     padding: 20px 0px;
