--- a/components/about/aboutus.htm
+++ b/components/about/aboutus.htm
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
-    <link rel="stylesheet" href="/components/about/aboutus.css">
+    <link rel="stylesheet" href="./aboutus.css">
 </head>
 
 <body>
