--- a/public/contact.css
+++ b/public/contact.css
@@ -180,23 +180,30 @@ textarea {
         height: 20px;
         width: 130px;
     }
-
     .sidebar {
-        display: none;
+        display: flex;
         flex-direction: column;
         align-items: flex-start;
         padding: 20px;
 
         background-color: #ffffff;
 
-        width: 45%;
-        height: 100%;
+        width: 240px;
+        height: 100vh;
 
-        position: absolute;
+        position: fixed;
         top: 55px;
         left: 0px;
 
+        transform: translateX(-400px);
+        transition: 0.5s ease;
 
+    }
+    .sidebar.open{
+        transform: translateX(0);
+    }
+    .no-scroll{
+        /* this will disable scroll behaviour */
         overflow: hidden;
     }
 
