--- a/aboutus.css
+++ b/aboutus.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;1,100;1,200&display=swap');
 
 * {
-    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    font-family: 'Poppins', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
     margin: 0;
     padding: 0;
 }
 p {
-    font-weight: 700;
+    font-weight: normal;
 }
 
 h4 {
@@ -25,7 +25,7 @@ nav {
     max-width: 1280px;
     height: 72px;
     margin: auto;
-    font-weight: 900;
+    font-weight: normal;
 
     position: sticky;
 }
@@ -33,18 +33,6 @@ nav {
     margin: 0 auto;
     height: 700px;
     width: 1280 px;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1280px;
-    height: 72px;
-    margin: auto;
-    font-weight: 900;
-
-    position: sticky;
 }
 .navLinks ul li {
     display: none;
@@ -84,7 +72,6 @@ button {
 .sidebar-btn {
     display: none;
 }
-
 
 
 .about{
@@ -131,12 +118,12 @@ button {
 
 
 
-@media screen and (width <=385px) {
+@media screen and (width <=435px) {
     * {
         font-size: 12px;
     }
     a{
-        font-weight: bold;
+        font-weight: normalP_p-p-p-p-p-p-p-;
     }
 
     h2 {
@@ -195,6 +182,73 @@ button {
         overflow: hidden;
     }
     
+    #respUl {
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        gap: 40px;
+        list-style: none;
+    }
+
+    .sidebar li a {
+        text-decoration: none;
+        color: black;
+    }
+}
+
+@media screen and (min-width: 436px) and (max-width: 780px) {
+
+
+    nav {
+        display: none;
+    }
+
+    .sidebar-btn {
+        display: flex;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+
+    .responsive-Img {
+        display: flex;
+        margin: 20px 10px;
+    }
+
+    .responsive-nav img {
+        height: 20px;
+        width: 130px;
+    }
+
+    .sidebar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 20px;
+
+        background-color: #ffffff;
+
+        width: 240px;
+        height: 100vh;
+
+        position: fixed;
+        top: 55px;
+        left: 0px;
+
+        transform: translateX(-400px);
+        transition: 0.5s ease;
+
+    }
+
+    .sidebar.open {
+        transform: translateX(0);
+    }
+
+    .no-scroll {
+        /* this will disable scroll behaviour */
+        overflow: hidden;
+    }
+
     #respUl {
         display: flex;
         justify-content: flex-start;
